feat: turing machine impl